--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
         <div class="container">
             <h1>Text_01</h1>
             <h2>
-"- **All keys and values must be in Hebrew, except product names, which can remain in English if applicable.** - **Descriptions (תיאור גנרי) must use correct technical Hebrew, not transliterations or incorrect phrasing.** - **The numeric values must be whole numbers (integers) only, not ranges or estimates.** - **Use only official Tambor product names for the 'שם המוצר' fields.** - **Descriptions must be exactly 5-6 words long and accurately describe the layer in Hebrew.** - **Ensure that all Hebrew text appears correctly in the JSON output and is not represented as Unicode escape sequences (e.g., \\u05d4).** - **Return only the final JSON output. Do not add explanations, extra text, or formatting.**"            </h2>
-        </div>
+- Extract relevant information from the text for each of the layers (\"יסוד\",\"ביניים\",\"עליון\").        </div>
         <div class="container">
             <h1>Text_02</h1>
             <h2>
