--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         <div class="container">
             <h1>Text_01</h1>
             <h2>
-- Extract relevant information from the text for each of the layers (\"יסוד\",\"ביניים\",\"עליון\").        </div>
+                
+- Extract relevant information from the text for each of the layers (\"יסוד\",\"ביניים\",\"עליון\").       
+        
+        </div>
         <div class="container">
             <h1>Text_02</h1>
             <h2>
